workflow update, added variables for SMTP Server address and port and 2 sonar fixes